--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.7.1",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "helmet": "^3.10.0",
     "serve-static": "^1.13.1"
   },
