--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-react-boilerplate",
+  "name": "ssg",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,19 +10,12 @@
     "start": "node server.js",
     "gh-pages": "gatsby build --prefix-paths && gh-pages -d public",
     "lint": "node_modules/.bin/eslint src --fix",
-    "dev": "(shx --silent rm -rf public || shx true) && gatsby develop",
-    "server": "cross-env NODE_ENV=development DEBUG=api nodemon server.js"
+    "dev": "gatsby develop"
   },
   "author": "Prototype Interactive",
   "license": "MIT",
   "dependencies": {
-    "basic-auth": "^2.0.0",
-    "compression": "^1.7.1",
-    "debug": "^3.1.0",
-    "express": "^4.16.2",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
-    "helmet": "^3.10.0",
-    "serve-static": "^1.13.1"
+    "helmet": "^3.10.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
@@ -39,6 +32,7 @@
     "gatsby-plugin-postcss-sass": "^1.0.16",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-react-next": "^1.0.8",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^1.5.16",
     "gatsby-transformer-json": "^1.0.14",
     "gh-pages": "^1.1.0",
