--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Prototype Interactive",
   "license": "MIT",
   "dependencies": {
-    "helmet": "^3.10.0"
+    "helmet": "^3.10.0",
+    "typeface-cooper-hewitt": "0.0.44"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
