--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^7.2.5",
     "bootstrap": "^4.0.0",
     "cross-env": "^5.1.3",
+    "dotenv": "^6.0.0",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.8.0",
