--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
   "author": "Brian Lee",
   "license": "MIT",
   "dependencies": {
-    "gatsby-plugin-sharp": "^1.6.48",
-    "gatsby-source-medium": "^1.0.14",
-    "gatsby-transformer-sharp": "^1.6.27",
-    "helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "2.0.5",
+    "gatsby-source-medium": "2.0.0",
+    "gatsby-transformer-sharp": "2.1.1",
+    "helmet": "3.13.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "typeface-cooper-hewitt": "0.0.44"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.5",
-    "bootstrap": "^4.0.0",
-    "cross-env": "^5.1.3",
+    "autoprefixer": "7.2.6",
+    "bootstrap": "4.1.3",
+    "cross-env": "5.2.0",
     "dotenv": "^6.0.0",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
-    "gatsby": "^1.9.178",
-    "gatsby-image": "^1.0.55",
-    "gatsby-link": "^1.6.36",
+    "gatsby": "2.0.7",
+    "gatsby-image": "2.0.8",
+    "gatsby-link": "2.0.1",
     "gatsby-plugin-postcss-sass": "^1.0.22",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-react-next": "^1.0.8",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-plugin-react-next": "1.0.11",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^1.5.16",
-    "gatsby-transformer-json": "^1.0.14",
-    "gatsby-transformer-screenshot": "^1.0.7",
-    "gatsby-transformer-yaml": "^1.5.18",
+    "gatsby-source-filesystem": "2.0.1",
+    "gatsby-transformer-json": "2.1.1",
+    "gatsby-transformer-screenshot": "2.0.2",
+    "gatsby-transformer-yaml": "2.1.1",
     "pixrem": "^4.0.1",
     "svg-sprite-loader": "^3.6.2"
   }
