--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   },
   "author": "Brian Lee",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brianjleeofcl/ssg-portfolio.git"
+  },
   "dependencies": {
+    "gatsby-plugin-sass": "2.0.1",
     "gatsby-plugin-sharp": "2.0.5",
     "gatsby-source-medium": "2.0.0",
     "gatsby-transformer-sharp": "2.1.1",
     "helmet": "3.13.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "node-sass": "4.9.3",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "react-helmet": "^5.2.0",
     "typeface-cooper-hewitt": "0.0.44"
   },
   "devDependencies": {
@@ -34,9 +41,7 @@
     "gatsby": "2.0.7",
     "gatsby-image": "2.0.8",
     "gatsby-link": "2.0.1",
-    "gatsby-plugin-postcss-sass": "^1.0.22",
     "gatsby-plugin-react-helmet": "3.0.0",
-    "gatsby-plugin-react-next": "1.0.11",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "2.0.1",
     "gatsby-transformer-json": "2.1.1",
