--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node-sass": "4.9.3",
     "react": "16.5.2",
     "react-dom": "16.5.2",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "5.2.0",
     "typeface-cooper-hewitt": "0.0.44"
   },
   "devDependencies": {
