--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "typeface-cooper-hewitt": "0.0.44"
   },
   "devDependencies": {
-    "autoprefixer": "7.2.6",
     "bootstrap": "4.1.3",
     "cross-env": "5.2.0",
     "dotenv": "^6.0.0",
@@ -46,8 +45,6 @@
     "gatsby-source-filesystem": "2.0.1",
     "gatsby-transformer-json": "2.1.1",
     "gatsby-transformer-screenshot": "2.0.2",
-    "gatsby-transformer-yaml": "2.1.1",
-    "pixrem": "^4.0.1",
-    "svg-sprite-loader": "^3.6.2"
+    "gatsby-transformer-yaml": "2.1.1"
   }
 }
